--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "formik": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
@@ -54,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-icons": "^3.0.0",
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.41.0",
