--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "formik": "^2.4.0",
     "history": "^5.3.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -27,6 +28,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
+    "sweetalert2": "^11.7.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
@@ -60,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
