--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "formik": "^2.4.0",
     "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/jwt-decode": "^3.1.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-toastify": "^4.1.0",
