--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
