--- a/package.json
+++ b/package.json
@@ -68,12 +68,12 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-toastify": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "prettier": "2.8.8"
+    "prettier": "^2.8.8"
   }
 }
