--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
     "sweetalert2": "^11.7.10",
+    "swiper": "^9.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
