--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.5.1",
     "axios": "^1.4.0",
     "formik": "^2.4.0",
+    "framer-motion": "^10.12.16",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
